--- a/index.html
+++ b/index.html
@@ -4,9 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Generatore biglietto treno</title>
 </head>
-<body>
-    
+<body class="text-center">
+    <div class="container p-4">
+        <div class="row">
+            <h1>Calcola il prezzo del tuo biglietto</h1>
+            <div class="col-12">
+                <form action="#">
+                    <div class="row">
+                            <div class="col-4">
+                                <label for="user" class="p-4">Nome e cognome</label>
+                                <div class="input py-1 px-1">
+                                    <input type="text" name="user" id="user">
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <label for="user" class="p-4">Km da percorrere</label>
+                                <div class="input py-1 px-1">
+                                    <input type="text" name="user" id="km">
+                                </div>
+                            </div>
+                            <div class="col-4 d-flex flex-column align-items-center">
+                                <label for="user" class="p-4">Fascia d'età</label>
+                                <select class="form-select cursor_pointer width_input border border-dark py-1 px-1" id="eta">
+                                    <option selected>Maggiorenne</option>
+                                    <option value="minorenne">Minorenne</option>
+                                    <option value="maggiorenne">Maggiorenne</option>
+                                    <option value="over 65">Over 65</option>
+                                  </select>
+                            </div>
+                        <div class="btn-group col-3 my-4 mx-auto" role="group" aria-label="Basic example">
+                            <button id="buttonGen" type="button" class="btn btn-success me-3 rounded-3">Genera</button>
+                            <button id="buttonNull" type="button" class="btn btn-secondary rounded-3">Annulla</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <script src="./js/main.js"></script>
 </body>
 </html>
