--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Generatore biglietto treno</title>
 </head>
-<body class="text-center">
+<body class="text-center bg_color_red ">
     <div class="container p-4">
         <div class="row">
-            <h1>Calcola il prezzo del tuo biglietto</h1>
-            <div class="col-12">
+            <h1 class="text-light">Calcola il prezzo del tuo biglietto</h1>
+            <div class="col-12 bg-danger rounded-3">
                 <form action="#">
                     <div class="row">
                             <div class="col-4">
@@ -37,11 +37,41 @@
                                   </select>
                             </div>
                         <div class="btn-group col-3 my-4 mx-auto" role="group" aria-label="Basic example">
-                            <button id="buttonGen" type="button" class="btn btn-success me-3 rounded-3">Genera</button>
+                            <button id="buttonGen" type="button" class="btn btn-warning me-3 rounded-3">Genera</button>
                             <button id="buttonNull" type="button" class="btn btn-secondary rounded-3">Annulla</button>
                         </div>
                     </div>
                 </form>
+            </div>
+            <div class="col-12 bg-danger rounded-3 my-5 p-4">
+                <h2 class="text-light">Il tuo biglietto</h2>
+                <div class="row">
+                    <h3 class="text-start border-bottom text-light my-5 p-3">Dettaglio passeggero</h3>
+                    <div class="col-3 bg_color_red rounded-3 text-light">
+                        <h4>Nome passeggero</h4>
+                        <div id="username">-</div>
+                    </div>
+                    <div class="col-9">
+                        <table class="table">
+                            <thead>
+                              <tr>
+                                <th scope="col">Offerta</th>
+                                <th scope="col">Carrozza</th>
+                                <th scope="col">Codice CP</th>
+                                <th scope="col">Costo biglietto</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+                              <tr>
+                                <td>Biglietto Standard</td>
+                                <td>5</td>
+                                <td>92911</td>
+                                <td id="prezzo">-</td>
+                              </tr>
+                            </tbody>
+                          </table>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
