fix (bug) selected

--- a/index.html
+++ b/index.html
@@ -30,9 +30,8 @@
                             <div class="col-4 d-flex flex-column align-items-center">
                                 <label for="user" class="p-4">Fascia d'età</label>
                                 <select class="form-select cursor_pointer width_input border border-dark py-1 px-1" id="eta">
-                                    <option selected>Maggiorenne</option>
+                                    <option value="maggiorenne" selected>Maggiorenne</option>
                                     <option value="minorenne">Minorenne</option>
-                                    <option value="maggiorenne">Maggiorenne</option>
                                     <option value="over 65">Over 65</option>
                                   </select>
                             </div>
